<resources>
    <string name="app_name">TM_Homework15</string>
    <string name="hello_user">Hello</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="btn_register">Add new person</string>
    <string name="btn_login">LOGIN</string>
    <string name="hint_name">Name</string>
    <string name="hint_surname">Surname</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="empty_field_toast">Fill all fields!!!</string>
    <string name="diolog_user">User</string>
    <string name="dialog_registrated">added</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_list">Show users</string>
    <string name="menu_about">About</string>
    <string name="pref_list_tittle">Sort by...</string>
    <string name="btn_show">Show persons</string>
    <string name="btn_preference">Open settings</string>
    <string name="btn_about">Show text (About)</string>
    <string name="save_settings">Save settings</string>
    <string name="addition">Проблема: чомусь список показується тільки після 2-го відкиття фрагменту Show Users + база данних записується тільки після закриття апки</string>
</resources>