<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/pref_list_tittle"
        android:textSize="@dimen/greeting_text_size" />

    <RadioGroup
        android:id="@+id/rg_order_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_by_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/hint_login" />

        <RadioButton
            android:id="@+id/rb_by_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_password" />

        <RadioButton
            android:id="@+id/rb_by_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_name" />

        <RadioButton
            android:id="@+id/rb_by_surname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_surname" />
    </RadioGroup>

    <Button
        android:id="@+id/btn_save_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_settings" />
</LinearLayout>